<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="30dp">

    <LinearLayout
        android:id="@+id/radiog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <EditText
            android:id="@+id/profile_name"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:hint="Nome del profilo"
            android:inputType="text"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:text="Metodo di rilevamento"
            android:textStyle="bold"
            android:textColor="@color/cardview_dark_background"/>

        <RadioGroup
            android:id="@+id/radioConnectivity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/gps"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/gps" />

            <RadioButton
                android:id="@+id/wifi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/wifi" />

            <RadioButton
                android:id="@+id/nfc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nfc" />

            <RadioButton
                android:id="@+id/beacon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/beacon" />
        </RadioGroup>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal" >
    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1"
        android:layout_marginTop="8dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/luminosita"
            android:textColor="@color/cardview_dark_background"/>

        <SeekBar
            android:id="@+id/brightness"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="22dp"
            android:layout_weight="1"
            android:max="10" />
    </LinearLayout>

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/auto_brightness"
            />

        <TextView
            android:id="@+id/Auto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/auto" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:text="@string/volume"
            android:textColor="@color/cardview_dark_background"/>

        <SeekBar
            android:id="@+id/volume"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="44dp"
            android:layout_weight="1"
            android:max="10" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:text="@string/bluetooth"
            android:textColor="@color/cardview_dark_background"/>

        <Switch
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
                android:id="@+id/bluetooth"
            />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:text="@string/app"
            android:textColor="@color/cardview_dark_background"/>
        <TextView
            android:id="@+id/app_list_text"
            android:onClick="onClickAppListText"
            android:clickable="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:hint="Choose an application" />
    </RelativeLayout>


    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:gravity="bottom">

        <Button
            android:id="@+id/crea_profilo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_gravity="center"
            android:background="@android:color/holo_blue_dark"
            android:text="CREA" />

    </RelativeLayout>
</LinearLayout>


